--- a/InventorySystemForiPhone/Info.plist
+++ b/InventorySystemForiPhone/Info.plist
@@ -45,6 +45,7 @@
 	<array>
 		<string>Lantinghei_0.ttf</string>
 		<string>Lantinghei_1.ttf</string>
+		<string>Lantinghei_2.ttf</string>
 	</array>
 	<key>CFBundleDisplayName</key>
 	<string>玲珑进销存</string>
